after adding HTTP optimisation

--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -47,4 +47,10 @@
     <a class="nav-link" routerLinkActive="active-link" routerLink="/pays">
         Pays
     </a>
+    <a class="nav-link" routerLinkActive="active-link" routerLink="/container">
+        Subject + service
+    </a>
+    <a class="nav-link" routerLinkActive="active-link" routerLink="/tchat">
+        Tchat
+    </a>
 </nav>
