--- a/src/app/components/personne/personne.html
+++ b/src/app/components/personne/personne.html
@@ -30,14 +30,16 @@
     </div>
 </form>
 <h3>Liste des personnes</h3>
+@if (!erreur) {
 <ul>
+
     @for (p of personnes; track $index) {
     <li>
         {{ p.prenom }} {{ p.nom }}
         <a [routerLink]="['/personne',p.id]">
             <i class="fa-solid fa-circle-user text-primary"></i>
         </a>
-        <button class="text-danger btn" (click)="supprimer($index)">
+        <button class="text-danger btn" (click)="supprimer($index, p.id)">
             <i class="fa-solid fa-trash-can"></i>
         </button>
     </li>
@@ -45,3 +47,10 @@
     <li>Liste vide !</li>
     }
 </ul>
+} @else {
+<div class="container my-5">
+    <div class="row alert alert-danger">
+        {{ erreur }}
+    </div>
+</div>
+}
