--- a/src/app/components/personne/personne.html
+++ b/src/app/components/personne/personne.html
@@ -1,34 +1,5 @@
 <h2>Gestion de personnes</h2>
-<h3>Ajouter une nouvelle personne</h3>
-<form (ngSubmit)="ajouter(form)" #form="ngForm">
-    <div>
-        <label for="nom">Nom</label>
-        <input type="text" id="nom" [(ngModel)]="personne.nom" name="nom" required minlength="2" #nom="ngModel">
-        <span [hidden]="nom.valid || nom.pristine">
-            Le nom est obligatoire
-        </span>
-    </div>
-    <div>
-        <label for="prenom">Prénom</label>
-        <input type="text" id="prenom" [(ngModel)]="personne.prenom" name="prenom" required minlength="2"
-            #prenom="ngModel">
-        <span [hidden]="prenom.valid || prenom.pristine">
-            Le prénom est obligatoire
-        </span>
-    </div>
-    <div>
-        <label for="age">Âge</label>
-        <input type="number" id="age" [(ngModel)]="personne.age" name="age" required min="15" max="150" #age="ngModel">
-        <span [hidden]="age.valid || age.pristine">
-            L'âge est obligatoire
-        </span>
-    </div>
-    <div>
-        <button ngClass="btn btn-primary" [disabled]="form.invalid">
-            Ajouter
-        </button>
-    </div>
-</form>
+<app-form-personne [title]="'Ajouter une nouvelle personne'" [(personne)]="personne"  (personneChange)="ajouter()"/>
 <h3>Liste des personnes</h3>
 @if (!erreur) {
 <ul>
