--- a/src/app/components/auth/auth.html
+++ b/src/app/components/auth/auth.html
@@ -1,5 +1,5 @@
 <h2>Page d'authentification</h2>
-<form (ngSubmit)="seConnecter(form)" #form="ngForm">
+<form (ngSubmit)="seConnecter()" #form="ngForm">
     <div>
         <label for="username">Nom d'utilisateur</label>
         <input type="text" id="username" [(ngModel)]="user.username" name="username">
