utilisation de ngrx

--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -53,4 +53,7 @@
     <a class="nav-link" routerLinkActive="active-link" routerLink="/tchat">
         Tchat
     </a>
+    <a class="nav-link" routerLinkActive="active-link" routerLink="/compteur">
+        Compteur (NgRx)
+    </a>
 </nav>
