panier dans le menu

--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -56,4 +56,7 @@
     <a class="nav-link" routerLinkActive="active-link" routerLink="/compteur">
         Compteur (NgRx)
     </a>
+    <span class="nav-link" >
+         Nombre de produits : {{ nombreProduit$ | async }}, Quantité totale : {{ qteTotale$ | async}} 
+    </span>
 </nav>
